--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "backned",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon api/index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
